# paramonte

./: .VERSION  .gitattributes  .gitattributes.txt  .gitignore  .gitmodules  .travis.yml  .travis.yml.success.yml  ACKNOWLEDGEMENT.md  ACKNOWLEDGMENT.md  CHANGES.md  CMakeLists.md  CMakeLists.txt  CONTRIBUTING-KERNEL.md  CONTRIBUTING.md  LICENSE  LICENSE.MIT  LICENSE.md  QUICKSTART.md  README.md  VERSION.md  buildMatDRAM.bat  buildMatDRAM.sh  buildParaMonte.bat  buildParaMonte.sh  codecov.yml  configParaMonte.bat  configParaMonte.sh  distclean.cmake  install.all.macos.sh  install.bat  install.bat.md  install.bat.usage.txt  install.cmake.md  install.config.md  install.macos.dynamic.sh  install.md  install.sh  install.sh.md  install.sh.usage.txt  install.tacc.dynamic.sh  (+5 more)
auxil/prerequisites/: .VERSION  .gitmodules  AUTHORS.md  Brewfile  CAF_ABI.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  INSTALL  INSTALL.md  README.md  install.sh  install.sh-usage
auxil/prerequisites/cmake/: AddInstallationScriptTest.cmake  Banner.txt.in  InstallFileManifest.cmake  hash-installed.cmake.in  makeDist.cmake  opencoarrays-VER-SHA256.txt.asc.in  opencoarrays-VER-SHA256.txt.in  uninstall.cmake.in
auxil/prerequisites/doc/: sample-compiler-output.c  sample-fortran-source.f90
auxil/prerequisites/prerequisites/: acceptable_compiler.f90  build.sh  build.sh-usage  check_version.sh  install-binary.sh  install-binary.sh-usage  install-ofp.sh  install-ofp.sh-usage  print_true.f90  stack.sh
auxil/prerequisites/src/: CMakeLists.txt  libcaf-gfortran-descriptor.h  libcaf-version-def.h  libcaf.h
src/ParaMonte/: BandSpectrum_mod.f90  Batse_mod.f90  CMakeLists.txt  Constants_mod.f90  CorrCoef_mod.f90  Cosmology_mod.f90  CrossCorr_mod.f90  DateTime_mod.f90  Decoration_mod.f90  Decoration_mod@Routines_smod.f90  EconomicsToolbox_mod.f90  Err_mod.f90  FileContents_mod.f90  FileList_mod.f90  File_mod.f90  Integration_mod.f90  JaggedArray_mod.f90  Math_mod.f90  Matrix_mod.f90  Misc_mod.f90  Optimization_mod.f90  ParaDISEProposalAbstract_mod.f90  ParaDISE_mod.f90  ParaDISE_mod@Input_smod.f90  ParaDISE_mod@Kernel_smod.f90  ParaDISE_mod@Setup_smod.f90  ParaDRAMChainFileContents_mod.f90  ParaDRAMProposalAbstract_mod.f90  ParaDRAMProposalAbstract_mod.inc.f90  ParaDRAMProposalNormal_mod.f90  ParaDRAMProposalSymmetric_mod.f90  ParaDRAMProposalTemplate_mod.f90  ParaDRAMProposalUniform_mod.f90  ParaDRAMProposal_mod.f90  ParaDRAMProposal_mod.inc.f90  ParaDRAMProposal_mod.inc.old.f90  ParaDRAMRefinedChain_mod.f90  ParaDRAM_ParaDISE_mod.inc.f90  ParaDRAM_mod.f90  ParaDRAM_mod.inc.f90  (+90 more)
src/fortran/test/: CMakeLists.txt  main.F90  test_pm_arrayCenter.F90  test_pm_arrayCenter@routines.F90  test_pm_arrayCenter@routines.inc.F90  test_pm_arrayChange.F90  test_pm_arrayChange@routines.F90  test_pm_arrayChange@routines.inc.F90  test_pm_arrayChoice.F90  test_pm_arrayChoice@routines.F90  test_pm_arrayChoice@routines.inc.F90  test_pm_arrayCompact.F90  test_pm_arrayCompact@routines.F90  test_pm_arrayCompact@routines.inc.F90  test_pm_arrayCompareLex.F90  test_pm_arrayCompareLex@routines.F90  test_pm_arrayCompareLex@routines.inc.F90  test_pm_arrayComplement.F90  test_pm_arrayComplement@routines.F90  test_pm_arrayComplement@routines.inc.F90  test_pm_arrayCopy.F90  test_pm_arrayCopy@routines.F90  test_pm_arrayCopy@routines.inc.F90  test_pm_arrayFill.F90  test_pm_arrayFill@routines.F90  test_pm_arrayFill@routines.inc.F90  test_pm_arrayFind.F90  test_pm_arrayFind@routines.F90  test_pm_arrayFind@routines.inc.F90  test_pm_arrayInit.F90  test_pm_arrayInit@routines.F90  test_pm_arrayInit@routines.inc.F90  test_pm_arrayInsert.F90  test_pm_arrayInsert@routines.F90  test_pm_arrayInsert@routines.inc.F90  test_pm_arrayMerge.F90  test_pm_arrayMerge@routines.F90  test_pm_arrayMerge@routines.inc.F90  test_pm_arrayPad.F90  test_pm_arrayPad@routines.F90  (+268 more)
src/kernel/: BandSpectrum_mod.f90  BandSpectrum_mod@EnergyFluence_smod.f90  BandSpectrum_mod@PhotonFluence_smod.f90  Batse_mod.f90  CMakeLists.txt  ClusteredPoint_mod.f90  Constants_mod.f90  CorrCoef_mod.f90  Cosmology_mod.f90  CrossCorr_mod.f90  DateTime_mod.f90  Decoration_mod.f90  Decoration_mod@Routines_smod.f90  Err_mod.f90  FileContents_mod.f90  FileList_mod.f90  File_mod.f90  GeoCyclicFit_mod.f90  Geometry_mod.f90  Integration_mod.f90  JaggedArray_mod.f90  KmeansOOP_mod.f90  Kmeans_mod.f90  Knn_mod.f90  Math_mod.f90  Matrix_mod.f90  MinVolPartition_mod.f90  Misc_mod.f90  MultiSkewNorm_mod.f90  MultiSkewNormal_mod.f90  Optimization_mod.f90  ParaDISEProposalAbstract_mod.f90  ParaDISE_ChainFileContents_mod.f90  ParaDISE_ProposalAbstract_mod.f90  ParaDISE_ProposalNormal_mod.f90  ParaDISE_ProposalUniform_mod.f90  ParaDISE_RefinedChain_mod.f90  ParaDISE_mod.f90  ParaDISE_mod@Input_smod.f90  ParaDISE_mod@Kernel_smod.f90  (+143 more)
src/kernel/tests/: CMakeLists.txt  Test_BandSpectrum_mod.f90  Test_Batse_mod.f90  Test_Constants_mod.f90  Test_CorrCoef_mod.f90  Test_Cosmology_mod.f90  Test_CrossCorr_mod.f90  Test_DateTime_mod.f90  Test_Decoration_mod.f90  Test_EconomicsToolbox_mod.f90  Test_Err_mod.f90  Test_FileContents_mod.f90  Test_FileList_mod.f90  Test_File_mod.f90  Test_GeoCyclicFit_mod.f90  Test_Integration_mod.f90  Test_KmeansFunctional_mod.f90:Zone.Identifier  Test_KmeansOOP_mod.f90  Test_Kmeans_mod.f90  Test_Knn_mod.f90  Test_Math_mod.f90  Test_Matrix_mod.f90  Test_MinVolPartition_mod.f90  Test_Misc_mod.f90  Test_MultiSkewNorm_mod.f90  Test_Optimization_mod.f90  (+59 more)
src/test/: CMakeLists.txt  Test_BandSpectrum_mod.f90  Test_Batse_mod.f90  Test_CorrCoef_mod.f90  Test_CrossCorr_mod.f90  Test_DateTime_mod.f90  Test_Decoration_mod.f90  Test_EconomicsToolbox_mod.f90  Test_Err_mod.f90  Test_FileContents_mod.f90  Test_FileList_mod.f90  Test_File_mod.f90  Test_Math_mod.f90  Test_Matrix_mod.f90  Test_Misc_mod.f90  Test_Optimization_mod.f90  Test_ParaMonte_mod.f90  Test_Path_mod.f90  Test_RandomSeed_mod.f90  Test_Statistics_mod.f90  Test_String_mod.f90  Test_System_mod.f90  Test_TimerCPU_mod.f90  Test_Timer_mod.f90  Test_TranGaus_mod.f90  Test_mod.f90  buildParaMonteTest.bat  filelist.txt  main.f90
(+3255 files in other folders)
